--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,50 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+};
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+root {
+  font-family: 'Montserrat', sans-serif;
+};
 
-.App-link {
-  color: #61dafb;
-}
+body {
+  width: 100%;
+  height: 1080px;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+};
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.container {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  display: grid;
+  grid-row: repeat(3, 1fr);
+  grid-template-areas: 
+  'navbarSession'
+  'centerSession'
+  'bottomSession';
+  overflow: hidden;
+};
+
+
+.navbarSession {
+  grid-area: navBarSession;
+  position: relative;
+};
+
+.centerSession {
+  grid-area: centerSession;
+  position: relative;
+};
+
+.bottomSession {
+  grid-area: bottomSession;
+  position: relative;
+  
+};
